other/res/restrict-usergroup-fsgroup-id/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-userid-groupid-fsgroup
status:
  ready: true
