other/res/restrict-usergroup-fsgroup-id/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: validate-userid-groupid-fsgroup
policies:
- restrict-usergroup-fsgroup-id.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: default/validate-userid-groupid-fsgroup
  resources:
  - myapp-pod
  result: pass
  rule: validate-fsgroup
- kind: Pod
  policy: default/validate-userid-groupid-fsgroup
  resources:
  - myapp-pod
  result: pass
  rule: validate-groupid
- kind: Pod
  policy: default/validate-userid-groupid-fsgroup
  resources:
  - myapp-pod
  result: pass
  rule: validate-userid
